# JobRadar

./: .gitignore  pyproject.toml
.cursor/: hooks.json
.cursor/checkpoint/: README.md
.cursor/hooks/: git_gate.py
apps/api/: main.py
src/domain/: career_source.py  compliance_policy.py  crawl.py  dedup_policy.py  explainability.py  explainability_policy.py  job_posting.py  lifecycle.py  lifecycle_policy.py  match_scoring.py  match_scoring_policy.py  normalization.py  normalization_policy.py  precision_policy.py  precision_ranking_policy.py  recommendation_gating.py  recommendation_policy.py  source_policy.py  user_profile.py
src/ports/: career_source_port.py  compliance_check_port.py  crawl_normalizer_port.py  crawler_plugin_port.py  explainability_port.py  explainability_telemetry_port.py  gating_telemetry_port.py  job_posting_port.py  lifecycle_telemetry_port.py  match_scoring_port.py  precision_policy_port.py  precision_telemetry_port.py  recommendation_gating_port.py  scoring_telemetry_port.py
tests/contract/: test_crawl_normalizer_contract.py  test_crawler_plugin_contract.py  test_explainability_contract.py
tests/integration/: test_api_career_sources.py  test_api_discovery.py  test_api_job_postings.py  test_api_source_compliance.py  test_career_source_use_cases.py  test_dedup.py  test_discover_jobs_use_cases.py  test_explainability.py  test_lifecycle.py  test_match_scoring.py  test_precision_policy.py  test_recommendation_gating.py  test_source_compliance_use_cases.py
tests/support/: discovery_stack.py  fake_compliance_check_adapter.py
(+53 files in other folders)
