[project]
name = "jobradar"
version = "0.1.0"
description = "Personal Job Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.139.0",
  "pydantic>=2.11.7",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
